[gd_scene load_steps=6 format=3 uid="uid://bx4vhvu8j2m8n"]

[ext_resource type="Script" path="res://Player.gd" id="1_rvu1b"]
[ext_resource type="Script" path="res://addons/smoothing/smoothing_2d.gd" id="2_07bar"]
[ext_resource type="Script" path="res://PlayerCamera.gd" id="2_exw1q"]
[ext_resource type="Texture2D" uid="uid://cpcsb6tybsnoc" path="res://sprites/player.png" id="3_w5ugx"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_6ix2o"]
radius = 16.6667
height = 54.0

[node name="Player" type="CharacterBody2D"]
floor_constant_speed = true
script = ExtResource("1_rvu1b")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 4)
scale = Vector2(2, 2)
shape = SubResource("CapsuleShape2D_6ix2o")

[node name="Camera2D" type="Camera2D" parent="."]
limit_smoothed = true
position_smoothing_enabled = true
rotation_smoothing_enabled = true
drag_horizontal_enabled = true
drag_vertical_enabled = true
drag_left_margin = 0.1
drag_right_margin = 0.1
script = ExtResource("2_exw1q")

[node name="JumpingTimer" type="Timer" parent="."]
wait_time = 0.053
one_shot = true

[node name="upBufferTimer" type="Timer" parent="."]
wait_time = 0.073
one_shot = true

[node name="coyoteTimer" type="Timer" parent="."]
wait_time = 0.193
one_shot = true

[node name="Smoothing2D" type="Node2D" parent="."]
script = ExtResource("2_07bar")

[node name="Player" type="Sprite2D" parent="Smoothing2D"]
position = Vector2(4, -2.38419e-07)
scale = Vector2(2.20312, 2.20312)
texture = ExtResource("3_w5ugx")
